# swc-plugin-react-generate-property

./: Cargo.toml  package.json
src/: lib.rs  options.rs
tests/__swc_snapshots__/src/lib.rs/: basic_test.js
