[package]
name = "swc-plugin-react-generate-property"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.193", features = [] }
serde_json = "1.0.108"
swc_core = { version = "0.86.83", features = ["ecma_plugin_transform"] }
swc_ecma_parser = { version = "0.141.28" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
